Update project to use .NET Core 3.0

--- a/src/DataStructures/Messages.resx
+++ b/src/DataStructures/Messages.resx
@@ -124,6 +124,6 @@
     <value>The graph is empty</value>
   </data>
   <data name="TopSortDirectedGraph" xml:space="preserve">
-    <value>Topological sort can only work on directed graphs</value>
+    <value>Topological sort can only be used with Directed Acyclic Graph</value>
   </data>
 </root>
